--- a/student-management-system2/src/main/resources/application.properties
+++ b/student-management-system2/src/main/resources/application.properties
@@ -16,4 +16,4 @@ X.RapidAPI.Key=833881cdf0mshfad7bd76ff01eabp18fba3jsn3151f2ea5bdc
 #spring.jpa.hibernate.ddl-auto=create
 
 #it helps to java data type into database data type
-#spring.jpa.properties.hibernate.dialect	org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
