--- a/book-my-show-mail/pom.xml
+++ b/book-my-show-mail/pom.xml
@@ -42,6 +42,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>3.5.7</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
