--- a/book-my-show-mail/src/main/resources/application.properties
+++ b/book-my-show-mail/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=book-my-show-mail
 server.port=8083
+
+#congfig mail
+spring..mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=accioshoppingwebsite@gmail.com
+spring.mail.password=relcfwhahhcvokv
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
